--- a/index.html
+++ b/index.html
@@ -1,59 +1,4 @@
 <html><head><title>Tech Fix Daily</title></head><body><h1>Daily Tech Fixes</h1><ul>
-<li><span style="color:#666; font-size:0.8em;">[2026-01-18]</span> <a href="guide:-microsoft’s-first-windows-11-update-of-2026.html"><strong>Guide: Microsoft’s first Windows 11 update of 2026 stopped some computers from shutting down Explained</strong></a></li>
+<li><span style="color:#666; font-size:0.8em;">[2026-01-18]</span> <a href="guide-microsoft’s-first-windows-11-update-of-2026.html"><strong>Guide: Microsoft’s first Windows 11 update of 2026 stopped some computers from shutting down Explained</strong></a></li>
 <li><span style="color:#666; font-size:0.8em;">[2026-01-18]</span> <a href="fix-top-11-ai-marketing-tools-you-should-use-(upda.html"><strong>Fix TOP 11 AI MARKETING TOOLS YOU SHOULD USE (Updated 2022)</strong></a></li>
 <li><a href="fix-android-system-webview-crash.html"><strong>Fix Android System WebView Crash</strong></a> <small>(22:18)</small></li>
-<li><a href="why-isn't-my-phone-connecting-to-my-car-android-au.html">Why Isn'T My Phone Connecting To My Car Android Auto</a> (2026-01-18)</li>
-<li><a href="mazda-android-auto-not-working.html">Mazda Android Auto Not Working</a> (2026-01-18)</li>
-<li><a href="why-is-android-auto-not-working-on-my-car.html">Why Is Android Auto Not Working On My Car</a> (2026-01-18)</li>
-<li><a href="android-auto-error-17.html">Android Auto Error 17</a> (2026-01-18)</li>
-<li><a href="why-won-t-my-phone-connect-to-my-car-wifi.html">Why Won T My Phone Connect To My Car Wifi</a> (2026-01-17)</li>
-<li><a href="why-won't-my-android-auto-connect-to-wifi.html">Why Won'T My Android Auto Connect To Wifi</a> (2026-01-17)</li>
-<li><a href="why-does-android-auto-keep-freezing.html">Why Does Android Auto Keep Freezing</a> (2026-01-17)</li>
-<li><a href="why-won't-my-phone-connect-to-car.html">Why Won'T My Phone Connect To Car</a> (2026-01-17)</li>
-<li><a href="how-to-fix-blurry-back-camera-on-android.html">How To Fix Blurry Back Camera On Android</a> (2026-01-16)</li>
-<li><a href="why-won't-my-phone-automatically-connect-to-wifi.html">Why Won'T My Phone Automatically Connect To Wifi</a> (2026-01-16)</li>
-<li><a href="how-to-fix-blurry-front-camera-on-android-samsung.html">How To Fix Blurry Front Camera On Android Samsung</a> (2026-01-16)</li>
-<li><a href="why-does-android-auto-keep-cutting-out.html">Why Does Android Auto Keep Cutting Out</a> (2026-01-16)</li>
-<li><a href="how-to-use-android-auto-in-mazda-cx-30.html">How To Use Android Auto In Mazda Cx 30</a> (2026-01-15)</li>
-<li><a href="how-to-fix-iphone-back-camera-black-screen.html">How To Fix Iphone Back Camera Black Screen</a> (2026-01-15)</li>
-<li><a href="why-does-android-auto-keep-disconnecting.html">Why Does Android Auto Keep Disconnecting</a> (2026-01-15)</li>
-<li><a href="how-to-fix-black-screen-on-android-phone.html">How To Fix Black Screen On Android Phone</a> (2026-01-15)</li>
-<li><a href="why-does-my-phone-sometimes-not-connect-to-wifi.html">Why Does My Phone Sometimes Not Connect To Wifi</a> (2026-01-14)</li>
-<li><a href="can-my-phone-be-fixed-if-the-screen-is-black.html">Can My Phone Be Fixed If The Screen Is Black</a> (2026-01-14)</li>
-<li><a href="2013-mazda-cx-5-android-auto.html">2013 Mazda Cx 5 Android Auto</a> (2026-01-14)</li>
-<li><a href="how-to-fix-android-auto-communication-error-8-redd.html">How To Fix Android Auto Communication Error 8 Reddit</a> (2026-01-14)</li>
-<li><a href="why-is-my-camera-just-showing-a-black-screen.html">Why Is My Camera Just Showing A Black Screen</a> (2026-01-13)</li>
-<li><a href="android-auto-communication-error-8-reddit.html">Android Auto Communication Error 8 Reddit</a> (2026-01-13)</li>
-<li><a href="android-auto-grayed-out.html">Android Auto Grayed Out</a> (2026-01-13)</li>
-<li><a href="why-does-my-laptop-sometimes-not-connect-to-wifi.html">Why Does My Laptop Sometimes Not Connect To Wifi</a> (2026-01-12)</li>
-<li><a href="how-to-fix-smart-tv-black-screen.html">How To Fix Smart Tv Black Screen</a> (2026-01-12)</li>
-<li><a href="android-auto-not-working-communication-error-8.html">Android Auto Not Working Communication Error 8</a> (2026-01-12)</li>
-<li><a href="mazda-wireless-android-auto-not-working.html">Mazda Wireless Android Auto Not Working</a> (2026-01-11)</li>
-<li><a href="does-my-mazda-have-android-auto.html">Does My Mazda Have Android Auto</a> (2026-01-11)</li>
-<li><a href="why-my-phone-auto-connect-to-wifi.html">Why My Phone Auto Connect To Wifi</a> (2026-01-11)</li>
-<li><a href="why-is-my-android-auto-not-connecting-to-my-car-sc.html">Why Is My Android Auto Not Connecting To My Car Screen</a> (2026-01-11)</li>
-<li><a href="why-is-my-phone-automatically-connecting-to-wifi.html">Why Is My Phone Automatically Connecting To Wifi</a> (2026-01-10)</li>
-<li><a href="how-to-fix-android-auto-black-screen.html">How To Fix Android Auto Black Screen</a> (2026-01-10)</li>
-<li><a href="why-won't-my-phone-auto-join-wifi.html">Why Won'T My Phone Auto Join Wifi</a> (2026-01-10)</li>
-<li><a href="why-isn't-my-computer-automatically-connecting-to-.html">Why Isn'T My Computer Automatically Connecting To Wifi</a> (2026-01-10)</li>
-<li><a href="android-auto-connection-error-7.html">Android Auto Connection Error 7</a> (2026-01-09)</li>
-<li><a href="why-is-my-android-auto-not-working-on-my-car.html">Why Is My Android Auto Not Working On My Car</a> (2026-01-09)</li>
-<li><a href="android-auto-will-not-connect-wirelessly.html">Android Auto Will Not Connect Wirelessly</a> (2026-01-09)</li>
-<li><a href="how-do-i-make-my-apps-appear-on-android-auto.html">How Do I Make My Apps Appear On Android Auto</a> (2026-01-09)</li>
-<li><a href="why-is-android-auto-not-connecting-to-my-truck.html">Why Is Android Auto Not Connecting To My Truck</a> (2026-01-08)</li>
-<li><a href="android-auto-connection-error-21.html">Android Auto Connection Error 21</a> (2026-01-08)</li>
-<li><a href="mazda-cx-5-android-auto-not-working.html">Mazda Cx 5 Android Auto Not Working</a> (2026-01-08)</li>
-<li><a href="android-auto-greyed-out-subaru.html">Android Auto Greyed Out Subaru</a> (2026-01-08)</li>
-<li><a href="how-to-fix-android-auto-communication-error-8.html">How To Fix Android Auto Communication Error 8</a> (2026-01-07)</li>
-<li><a href="why-is-my-android-auto-not-connecting-to-my-car.html">Why Is My Android Auto Not Connecting To My Car</a> (2026-01-07)</li>
-<li><a href="why-is-android-auto-not-working-in-my-car.html">Why Is Android Auto Not Working In My Car</a> (2026-01-07)</li>
-<li><a href="can't-see-android-auto-on-my-phone.html">Can'T See Android Auto On My Phone</a> (2026-01-06)</li>
-<li><a href="how-to-fix-android-auto-communication-error-8-redd.html">How To Fix Android Auto Communication Error 8 Reddit</a> (2026-01-06)</li>
-<li><a href="how-do-i-fix-android-auto-connection.html">How Do I Fix Android Auto Connection</a> (2026-01-06)</li>
-<li><a href="how-to-fix-android-camera-error.html">How To Fix Android Camera Error</a> (2026-01-06)</li>
-<li><a href="why-is-android-auto-not-on-my-phone.html">Why Is Android Auto Not On My Phone</a> (2026-01-05)</li>
-<li><a href="why-isn't-my-android-auto-connecting-to-my-phone.html">Why Isn'T My Android Auto Connecting To My Phone</a> (2026-01-05)</li>
-<li><a href="how-to-fix-android-auto-disconnecting.html">How To Fix Android Auto Disconnecting</a> (2026-01-05)</li>
-<li><a href="how-to-fix-android-auto-connection.html">How To Fix Android Auto Connection</a> (2026-01-05)</li>
-<li><a href="instagram-music-not-working-nigeria-region-guide.html">Instagram Music Not Working Nigeria Region Guide</a> (2026-01-05)</li>
-<li><a href="how-to-fix-android-easy-fix.html">How To Fix Android Easy Fix</a> (2026-01-05)</li></ul></body></html>
